@startuml
title 비동기 이벤트 소비 구조 - 4. 서비스 적용 예시

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam defaultTextAlignment center

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #CBD5E1
  ArrowColor #475569
  FontColor #0F172A
  HeaderBackgroundColor #F8FAFC
}

skinparam interface {
  BackgroundColor #F8FAFC
  BorderColor #94A3B8
  FontColor #0F172A
}

skinparam note {
  BackgroundColor #EFF6FF
  BorderColor #93C5FD
  FontColor #1E3A8A
}

left to right direction

package "Order 서비스" #EFF6FF {
  class "PaymentEventConsumer" as PaymentEventConsumer {
    + consume(record): void
  }

  class "OrderPaymentEventProcessor" as OrderPaymentEventProcessor
  interface "OrderRepository" as OrderRepository
  interface "EventPublisher" as EventPublisher

  PaymentEventConsumer --> OrderPaymentEventProcessor
  OrderPaymentEventProcessor --> OrderRepository
  OrderPaymentEventProcessor --> EventPublisher
}

package "Chat 서비스" #F0FDF4 {
  class "FundingEventConsumer" as FundingEventConsumer {
    + consume(record): void
  }

  class "ChatFundingEventProcessor" as ChatFundingEventProcessor
  class "ChatFundingSyncService" as ChatFundingSyncService

  FundingEventConsumer --> ChatFundingEventProcessor
  ChatFundingEventProcessor --> ChatFundingSyncService
}

note bottom
두 서비스 모두 Listener는 얇게 유지한다.
Processor가 비즈니스 흐름을 소유하고
Service 또는 Repository와 협력한다.
end note

@enduml
